--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             document.getElementById(
               "clickHere"
             ).innerHTML = `Ohh ooo. Please${emojis[emojiIndex]} click here!`;
+            document.getElementById("noButton").innerText =
+              "No " + emojis[emojiIndex];
             var x =
               Math.random() *
               (window.innerWidth -
